--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 			<artifactId>jcommander</artifactId>
 			<version>1.58</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-csv</artifactId>
+		    <version>1.5</version>
+		</dependency>
 	</dependencies>
 	<!--Build plugins -->
 	<build>
